# se-toolkit-hackathon

./: .env.docker.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/movie_backend/: __init__.py  crud.py  database.py  main.py  models.py  schemas.py
caddy/: Caddyfile
chat/: Dockerfile
frontend/: Dockerfile  default.conf  index.html
mcp/mcp-movies/: pyproject.toml
mcp/mcp-movies/src/mcp_movies/: __init__.py
movie-chat/: pyproject.toml
movie-chat/src/movie_chat/: __init__.py
nanobot/: Dockerfile  README.md  config.json  entrypoint.py  pyproject.toml
nanobot/workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
nanobot/workspace/cron/: README.md
nanobot/workspace/memory/: README.md
nanobot/workspace/skills/: movie-recommendation.md
