[project]
name = "nanobot"
version = "0.1.0"
description = "Movie Watchlist Nanobot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp-movies",
    "nanobot-ai",
    "nanobot-webchat",
    "mcp-webchat",
]

[tool.uv.sources]
nanobot-ai = { url = "https://github.com/HKUDS/nanobot/archive/e7d371ec1e6531b28898ec2c869ef338e8dd46ec.zip" }
mcp-movies = { workspace = true, editable = true }
nanobot-webchat = { workspace = true, editable = true }
mcp-webchat = { workspace = true, editable = true }
