[project]
name = "mcp-movies"
version = "0.1.0"
description = "MCP server for Movie Watchlist tools"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_movies"]

[project.scripts]
mcp-movies = "mcp_movies:main"
